@@ -47,12 +47,12 @@
   <properties>
     <site.url.module.prefix>testing/aem-mock</site.url.module.prefix>
 
-    <jcr-mock.version>1.1.10</jcr-mock.version>
-    <osgi-mock.version>2.0.0</osgi-mock.version>
-    <sling-mock.version>1.6.0</sling-mock.version>
+    <jcr-mock.version>1.1.12</jcr-mock.version>
+    <osgi-mock.version>2.0.2</osgi-mock.version>
+    <sling-mock.version>1.6.2</sling-mock.version>
     <sling-mock.oak.version>1.0.0</sling-mock.oak.version>
     <sling-mock.jackrabbit.version>1.0.0</sling-mock.jackrabbit.version>
-    <resourceresolver-mock.version>1.1.10</resourceresolver-mock.version>
+    <resourceresolver-mock.version>1.1.12</resourceresolver-mock.version>
     <logging-mock.version>1.0.0</logging-mock.version>
     
     <oak.version>1.2.2</oak.version>
@@ -88,6 +88,16 @@
       <artifactId>org.apache.sling.testing.osgi-mock</artifactId>
       <version>${osgi-mock.version}</version>
       <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.compendium</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.sling</groupId>
@@ -95,6 +105,18 @@
       <version>${sling-mock.version}</version>
       <scope>compile</scope>
       <exclusions>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.compendium</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
         <!-- Make sure Sling API from aem-api is used -->
         <exclusion>
           <groupId>org.apache.sling</groupId>
@@ -107,6 +129,16 @@
       <artifactId>org.apache.sling.testing.resourceresolver-mock</artifactId>
       <version>${resourceresolver-mock.version}</version>
       <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.compendium</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -122,11 +154,29 @@
       <scope>compile</scope>
     </dependency>
 
+    <!-- Include AEM and OSGi APIs in 'provided' scope to let the consuming project decide which to use -->
+    <!-- (other versions of this APIs use other artifact ids) -->
     <dependency>
       <groupId>com.adobe.aem</groupId>
       <artifactId>uber-jar</artifactId>
       <classifier>apis</classifier>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi.core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi.cmpn</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
@@ -134,7 +184,7 @@
       <artifactId>slf4j-simple</artifactId>
       <scope>compile</scope>
     </dependency>
-
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -147,7 +197,7 @@
       <version>${logging-mock.version}</version>
       <scope>test</scope>
     </dependency>
-
+    
   </dependencies>
   
   <dependencyManagement>
@@ -157,7 +207,7 @@
       <dependency>
         <groupId>io.wcm.maven</groupId>
         <artifactId>io.wcm.maven.aem-dependencies</artifactId>
-        <version>6.1.0.0000-SNAPSHOT</version>
+        <version>6.1.0.0000</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -198,6 +248,20 @@
       </plugin>
 
     </plugins>
+    <pluginManagement>
+      <plugins>
+      
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <!-- Travis build workaround, see https://github.com/travis-ci/travis-ci/issues/3396 -->
+            <argLine>-Xmx1024m -XX:MaxPermSize=512M</argLine>
+          </configuration>
+        </plugin>
+
+      </plugins>
+    </pluginManagement>
   </build>
 
   <reporting>
